# clai

./: .gitignore  CHANGELOG.md  CHAT_PANEL_REFACTOR_DESIGN.md  COMMAND_CONTEXT.md  COMMAND_CONTEXT_QUICK_REF.md  ECHO_COMMAND_EXAMPLE.md  LICENSE  Makefile  PERFORMANCE_BASELINE.md  PERFORMANCE_OPTIMIZATION_PLAN.md  README.md  TERMINAL_NAVIGATION_ARCHITECTURE.md  TERMINAL_TAB_COMPLETION_DESIGN.md  TILING_AND_TABS_ARCHITECTURE.md  TIMESERIES_CHART_IMPLEMENTATION_PLAN.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vitest.config.js
.github/workflows/: ci.yml  flatpak.yml  release.yml
aur/: PKGBUILD
docs/: AGENT_FLEET_IMPLEMENTATION.md  CHAT_REFACTOR_GUIDE.md  COLOR_PALETTE_GUIDE.md  CORE_CHAT_IMPLEMENTATION.md  FLATPAK_PATH_RESOLUTION.md  FS_TOOLS_SANDBOXING_OPTIONS.md  LIGHT_THEME_DESIGN.md  LIGHT_THEME_IMPLEMENTATION_PLAN.md  MCP_TOOL_PERMISSIONS_PROPOSAL.md  NETDATA_PLUGIN_ARCHITECTURE.md  PHASE3_COMPLETION_REPORT.md  PLATFORM_STYLING.md  PLUGIN_DEFINED_CONFIG_FLOW.md  PLUGIN_DEFINED_CONFIG_IMPLEMENTATION.md  TAB_CONTEXT_ARCHITECTURE.md  TESTING_AND_TYPES.md  TILING_AND_TABS_ARCHITECTURE.md  WORKSPACE_CONFIG_SPLIT.md
flatpak/: README.md  build-local.sh  com.juacker.clai.desktop  com.juacker.clai.metainfo.xml  com.juacker.clai.yml  io.github.juacker.clai.desktop  io.github.juacker.clai.metainfo.xml
src/: App.css  App.jsx  App.tsx  Routes.jsx  Routes.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/embedded/agent-templates/: code-reviewer.json  sow-tracker.json
src-tauri/icons/: icon.icns
src-tauri/migrations/workspace/: 20260524000000_initial.sql  20260605000000_assistant_compactions.sql  20260605001000_assistant_session_links.sql
src-tauri/src/: chat.rs  lib.rs  main.rs  paths.rs  system_apps.rs  workspace_index.rs
src-tauri/src/agents/: cli_runner.rs  designer.rs  init.rs  mod.rs  runner.rs  schedule.rs  scheduler.rs  template.rs  tmp.rs  types.rs
src-tauri/src/agents/definitions/: anomaly_investigator.rs  mod.rs
src-tauri/src/api/: ai.rs  client.rs  error.rs  mod.rs  netdata.rs
src-tauri/src/assistant/: compaction.rs  engine.rs  events.rs  image_store.rs  local_agent.rs  local_mcp.rs  mod.rs  repository.rs  repository_tests.rs  runtime.rs  types.rs
src-tauri/src/assistant/auth/: mod.rs  secrets.rs
src-tauri/src/assistant/providers/: anthropic.rs  cli.rs  mod.rs  openai.rs  registry.rs  types.rs
src-tauri/src/assistant/sandbox/: linux_bwrap.rs  macos_seatbelt.rs  mod.rs  profile.rs  runner.rs
src-tauri/src/assistant/tools/: ask_user.rs  command_splitter.rs  history_query.rs  inter_agent.rs  local.rs  mod.rs  registry.rs  router.rs  workspace_tasks.rs
src-tauri/src/auth/: mod.rs  token.rs
src-tauri/src/commands/: agent_templates.rs  agents.rs  api.rs  app_info.rs  assistant.rs  auth.rs  autopilot.rs  bridge.rs  fleet.rs  mcp_servers.rs  mod.rs  path_grants.rs  permissions.rs  provider.rs  provider_connections.rs  provider_sessions.rs  skills.rs  system.rs  terminal.rs  workspace.rs  workspace_agents.rs
src-tauri/src/config/: bundled.rs  mod.rs  types.rs  workspace_config.rs
src-tauri/src/db/: mod.rs
src-tauri/src/mcp/: bridge.rs  client.rs  mod.rs  server.rs
src-tauri/src/mcp/tools/: anomalies.rs  canvas.rs  chat.rs  dashboard.rs  mod.rs  netdata.rs  tabs.rs  workspace.rs
src-tauri/src/providers/: mod.rs
src-tauri/src/workers/: cli_runner.rs  executor.rs  init.rs  mod.rs  runner.rs  scheduler.rs  types.rs
src-tauri/src/workers/definitions/: anomaly_investigator.rs  mod.rs
src-tauri/tests/: cancel_run.rs  prompt_build.rs
src/agents/: activityBus.js  bridge.js  index.js  useAgentBridge.js  useOnDemandAgent.js
src/api/: client.js  client.ts
src/assistant/: client.js  client.ts  index.js  sessionStore.js  sessionStore.test.js  sessionStore.test.ts  sessionStore.ts  useAssistantEvents.js  useAssistantEvents.test.js  useAssistantEvents.test.ts  useAssistantEvents.ts  useAssistantSession.js  useAssistantSession.ts
src/commands/: CommandRegistry.js  index.js
src/components/: ConfirmDialog.jsx  ConfirmDialog.module.css  ConfirmDialog.tsx  Echo.jsx  Echo.module.css  Echo.tsx  InlineApprovalCard.module.css  InlineApprovalCard.tsx  InlinePathGrantCard.module.css  InlinePathGrantCard.tsx  PermissionAttentionNotifications.tsx  UserAvatar.jsx  UserAvatar.module.css  WorkspaceFilePreviewPanel.jsx  WorkspaceFilePreviewPanel.module.css  WorkspaceFilePreviewPanel.tsx  WorkspaceTaskNotifications.jsx  WorkspaceTaskNotifications.module.css  WorkspaceTaskTranscriptPanel.jsx  WorkspaceTaskTranscriptPanel.module.css  WorkspaceTaskTranscriptPanel.tsx
src/contexts/: AgentActivityContext.jsx  ChatManagerContext.jsx  ChatManagerContext.tsx  CommandContext.jsx  CommandContext.tsx  CommandMessagingContext.jsx  FleetContext.jsx  PluginContext.jsx  SharedSpaceRoomDataContext.jsx  SpaceRoomContext.jsx  TabContext.jsx  TabContext.tsx  TabManagerContext.jsx  TabManagerContext.tsx
src/fleet/: client.js  client.ts
src/hooks/: useCommandRegistration.js  useDebounce.js  useFleetActivity.ts  useKeyboardShortcuts.js  useKeyboardShortcuts.ts  usePermissionAttention.ts  usePlatform.js  useWorkspaceSelectors.js
src/layouts/: FleetLayout.module.css  FleetLayout.tsx  MainLayout.jsx  MainLayout.module.css  MainLayout.tsx
src/pages/: Fleet.jsx  Fleet.module.css  Home.jsx  Home.module.css  Login.jsx  Login.module.css  NotFound.jsx  NotFound.module.css  NotFound.tsx  Workspace.jsx  Workspace.module.css  Workspace.tsx
src/permissions/: client.ts
src/plugins/: ExamplePlugin.js  PluginInterface.js  PluginManager.js  PluginRegistry.js  README.md  index.js
src/samples/: bar_chart_sample.json  bubble_chart_sample.json  timeseries_chart_sample.json
src/services/: chatService.js
src/stores/: workspaceStore.js  workspaceStore.ts
src/styles/: global.css  theme-dark.css  theme-light.css
src/test/: setup.js
src/utils/: cancelRunHotkey.test.ts  cancelRunHotkey.ts  canvasElementValidator.js  commandParser.js  commandParser.ts  commandRegistry.js  commandTypes.js  (+14 more)
(+193 files in other folders)
