[package]
name = "clai"
version = "0.1.0"
description = "Command Line AI App"
authors = ["juacker"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework and plugins
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-updater = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client - like axios for Rust
# Features: json (automatic JSON parsing), stream (for SSE), gzip (compression)
reqwest = { version = "0.12", features = ["json", "stream", "gzip"] }

# Async runtime - required by reqwest
# The "full" feature enables all async utilities
tokio = { version = "1", features = ["full"] }

# Secure token storage using OS keychain
# Linux: libsecret, macOS: Keychain, Windows: Credential Manager
keyring = "3"

# Ergonomic error handling with derive macro
thiserror = "2"

# Structured logging (better than println!)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async stream utilities (for SSE parsing)
futures = "0.3"

# Async trait support (for worker handlers)
async-trait = "0.1"

# UUID generation (for tool invocations and agent IDs)
uuid = { version = "1", features = ["v4"] }

# Date/time handling (for agent timestamps)
chrono = { version = "0.4", features = ["serde"] }

# Platform-specific directories (config, data, cache)
dirs = "5"

# MCP (Model Context Protocol) server
# For AI CLI tool integration (Claude Code, Gemini CLI, etc.)
# Features:
# - server: Core server functionality
# - transport-streamable-http-server: Full HTTP/SSE transport for AI CLI connections
# - macros: #[tool] and #[tool_router] procedural macros
rmcp = { version = "0.12", features = ["server", "transport-streamable-http-server", "macros"] }

# JSON Schema generation for MCP tool definitions
schemars = "1"

# HTTP server for MCP (AI CLIs connect via HTTP)
axum = "0.8"
tower = "0.5"
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
# Temporary directories for testing
tempfile = "3"
