[package]
name = "clai"
version = "26.6.18"
description = "Desktop multi-agent orchestration app with MCP-native tools"
authors = ["juacker"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework and plugins
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-updater = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client - like axios for Rust
# Features: json (automatic JSON parsing), stream (for SSE), gzip (compression)
reqwest = { version = "0.12", features = ["json", "stream", "gzip"] }

# Async runtime - required by reqwest
# The "full" feature enables all async utilities
tokio = { version = "1", features = ["full"] }

# Keyring for secure token storage
# - linux-native-sync-persistent: Combines keyutils + Secret Service for persistent storage across restarts
# - apple-native: Uses macOS Keychain
# - windows-native: Uses Windows Credential Manager
keyring = { version = "3", features = ["linux-native-sync-persistent", "apple-native", "windows-native"] }

# rustls is pulled in transitively by rmcp's reqwest 0.13 (HTTP MCP transport).
# rustls 0.23 requires a process-wide default CryptoProvider to be installed
# before any TLS handshake, otherwise reqwest panics with "No provider set".
# We install the `ring` provider (already in the tree) once at startup; declaring
# rustls directly here gives us access to that API. default-features off avoids
# pulling the heavier aws-lc-rs backend.
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# Ergonomic error handling with derive macro
thiserror = "2"

# Structured logging (better than println!)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async stream utilities (for SSE parsing)
futures = "0.3"

# Async trait support (for worker handlers)
async-trait = "0.1"

# UUID generation (for tool invocations and agent IDs)
uuid = { version = "1", features = ["v4"] }

# Date/time handling (for agent timestamps)
chrono = { version = "0.4", features = ["serde"] }
# Timezone database for cron schedules tied to a user-local IANA zone
# (e.g. "America/New_York"). chrono-tz handles DST transitions internally
# so cron's "every weekday at 9am" fires at the right wall-clock time
# across DST boundaries.
chrono-tz = "0.10"
# Parse and iterate Vixie-style cron expressions for workspace
# schedules. We expose 5-field cron to the user and pad with a leading
# "0 " internally because this crate requires a seconds field.
cron = "0.12"
# Resolve the host's IANA timezone name once at startup so the frontend
# can default new cron schedules to the user's local zone instead of
# UTC. Pure native call, no fork.
iana-time-zone = "0.1"

# Platform-specific directories (config, data, cache)
dirs = "5"
glob = "0.3"
include_dir = "0.7"

# MCP (Model Context Protocol) server
# For AI CLI tool integration (Claude Code, Gemini CLI, etc.)
# Features:
# - server: Core server functionality
# - transport-streamable-http-server: Full HTTP/SSE transport for AI CLI connections
# - macros: #[tool] and #[tool_router] procedural macros
rmcp = { version = "1.7", features = ["client", "server", "transport-streamable-http-server", "transport-streamable-http-client-reqwest", "macros", "auth"] }
# Direct alias for the same reqwest major rmcp uses internally. This lets CLAI
# construct rmcp's auth-aware Streamable HTTP client without mixing it with the
# app's existing reqwest 0.12 dependency.
rmcp-reqwest = { package = "reqwest", version = "0.13.2", default-features = false, features = ["json", "stream", "rustls-no-provider"] }

# JSON Schema generation for MCP tool definitions
schemars = "1"
jsonschema = "0.33"

# HTTP server for MCP (AI CLIs connect via HTTP)
axum = "0.8"
tower = "0.5"
tokio-util = { version = "0.7", features = ["rt"] }

# SQLite database for workspace state persistence
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
# Raw sqlite3 handle access (shared with sqlx-sqlite, same version) so the
# history_query tool can hard-disable ATTACH via sqlite3_limit. Pinned to the
# version sqlx-sqlite resolves (as_raw_handle exposes that crate's `sqlite3`).
libsqlite3-sys = "0.30"
scraper = "0.26.0"
htmd = "0.5.4"
base64 = "0.22"

# PTY backend for the integrated terminal (cross-platform; ConPTY on Windows).
portable-pty = "0.9"
ts-rs = { version = "12.0.1", features = ["serde-compat", "serde-json-impl"] }

# Same crate (and version) that `keyring`'s sync secret-service backend uses
# internally, so this adds no new transitive code. We need it directly to
# create the Secret Service "default" collection when none exists (live
# sessions, autologin accounts, fresh users — anywhere PAM never created the
# login keyring). `keyring` 3.x cannot self-heal in that case: its create
# path for the special `default` target only re-reads the alias.
[target.'cfg(target_os = "linux")'.dependencies]
dbus-secret-service = "4.1"

# Unix-only: needed to SIGKILL the *whole* process group of a timed-out
# bash_exec child (sandbox -> sh -> cargo -> rustc, …), not just the direct
# child. Already in the tree transitively (tokio, sqlx, …); declaring it
# directly only exposes libc::kill. See assistant::sandbox::runner.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# Temporary directories for testing
tempfile = "3"
